--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Spatial by TEMPLATED</title>
+		<title>Craig Wilkinson</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -23,25 +18,10 @@
 	</head>
 	<body class="landing">
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
-			</header>
-
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Spatial</h2>
-				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
-				<ul class="actions">
-					<li><a href="#" class="button special big">Get Started</a></li>
-				</ul>
+				<h2>Craig Wilkinson</h2>
+				<p>A website about who I am and what I can do</p>
 			</section>
 
 			<!-- One -->
@@ -50,13 +30,13 @@
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Maecenas luctus lectus</h2>
-									<p>Perspiciatis doloremque recusandae dolor</p>
+									<h2>Craig Wilkinson</h2>
+									<p>This is who I am</p>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ea mollitia corporis id, distinctio sunt veritatis officiis dolore reprehenderit deleniti voluptatibus harum magna, doloremque alias quisquam minus, eaque. Feugiat quod, nesciunt! Iste quos ipsam, iusto sit esse.</p>
-								<p>Dolorum aspernatur maxime libero ratione quidem distinctio, placeat fugiat laborum voluptatum enim neque soluta vel sunt id ex veritatis. Labore rerum, odit sapiente, alias mollitia magnam exercitationem modi amet earum quia atque ipsum voluptas asperiores quas laboriosam.</p>
+								<p>I am a 19 year old Auckland University Student who is currently doing a Bachelor of Science degree in Computer Science. I am a programmer but I want to learn more about programming and what it means to be a programmer, I love the community that being a programmer brings and the social aspect of it like the meet ups and the online groups, and I want to be more a part of it because the people in the community are like me, they are passionate about programming.</p>
+				
 							</div>
 						</div>
 					</div>
@@ -65,108 +45,87 @@
 			<!-- Two -->
 				<section id="two" class="wrapper style2 special">
 					<div class="container">
-						<header class="major">
-							<h2>Fusce ultrices fringilla</h2>
-							<p>Maecenas vitae tellus feugiat eleifend</p>
+						<header class="major special">
+							<h2>My Projects</h2>
+							<p>What I have Completed and What I am Working on</p>
 						</header>
-						<div class="row 150%">
-							<div class="6u 12u$(xsmall)">
-								<div class="image fit captioned">
-									<img src="images/pic02.jpg" alt="" />
-									<h3>Lorem ipsum dolor sit amet.</h3>
+						<div class="feature-grid">
+							<div class="feature">
+								<div class="image rounded"><img src="images/Python.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<a href="http://github.com/CraigWilkinson/windows-wallpaper-changer"><h4>Wall Paper Changer</h4></a>
+										<p>Python Development</p>
+									</header>
+									<p>This is a small app which can be used to change the wallpaper of your computer on Windows.</p>
 								</div>
 							</div>
-							<div class="6u$ 12u$(xsmall)">
-								<div class="image fit captioned">
-									<img src="images/pic03.jpg" alt="" />
-									<h3>Illum, maiores tempora cupid?</h3>
+							<div class="feature">
+								<div class="image rounded"><img src="images/Android.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<a href="http://github.com/AlexBHarley/TakeUp_Android"><h4>Take Up</h4></a>
+										<p>Android Development</p>
+									</header>
+									<p>This was a project for the Summer of Tech Hackfest this was completed by a team of 5 (4 Programmers and 1 Designer) in 16 Hours, It is an app which uses the TradeMe API to provide equipment for desired Hobbies</p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/Android.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<a href="http://github.com/CraigWilkinson/Android-Drinking-App"><h4>Drinking App</h4></a>
+										<p>Android Development - In progress </p>
+									</header>
+									<p>This is an app which takes the bars in Auckland and has the bars which provide the cheapest drinks, It also has a custom user rating so you can choose the bar with the best vibe and the cheapest drinks.</p>
+								</div>
+							</div>
+							<div class="feature">
+								<div class="image rounded"><img src="images/Android.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<a href="http://github.com/CraigWilkinson/Android-Pick-Me-Up"><h4>Pick Me Up</h4></a>
+										<p>Android Development - In progress </p>
+									</header>
+									<p>This is an app which provides a a service designed for intoxicated users where they simply press a button and then a text with their location is sent to the pre entered mobile number.</p>
 								</div>
 							</div>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button special big">Nulla luctus</a></li>
-							<li><a href="#" class="button big">Sed vulputate</a></li>
-						</ul>
 					</div>
 				</section>
 
 			<!-- Three -->
 				<section id="three" class="wrapper style1">
 					<div class="container">
-						<header class="major special">
-							<h2>Mauris vulputate dolor</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
-						</header>
-						<div class="feature-grid">
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
-									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
+							<header class="major">
+								<h2>My Hobbies</h2>
+								<p>What I'm Interested in outside of Programming</p>
+							</header>
+							<div class="row 150%">
+								<div class="6u 12u$(xsmall)">
+									<div class="image fit captioned">
+										<img src="images/hockey.jpg" alt="" />
+										<h3>Hockey</h3>
+									</div>
 								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
-									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
-									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
-									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
+								<div class="6u$ 12u$(xsmall)">
+									<div class="image fit captioned">
+										<img src="images/diving.jpg" alt="" />
+										<h3><center>Diving</center></h3>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style3 special">
-					<div class="container">
-						<header class="major">
-							<h2>Aenean elementum ligula</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
-						</header>
-						<ul class="actions">
-							<li><a href="#" class="button special big">Get in touch</a></li>
-						</ul>
-					</div>
 				</section>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li><a href="https://www.facebook.com/craig.wilkinson.942" class="icon fa-facebook"></a></li>
+						<li><a href="https://twitter.com/Craig_Wilk" class="icon fa-twitter"></a></li>
+						<li><a href="https://nz.linkedin.com/pub/craig-wilkinson/b5/735/227" class="icon fa-linkedin"></a></li>
+						<li><a href="https://github.com/CraigWilkinson" class="icon fa-github"></a></li>
 					</ul>
 				</div>
 			</footer>
